GPencil's draw tool has its strokes offset after using fill tool #85549

Closed
opened 2021-02-11 13:19:29 +01:00 by Jonathan Mielke · 16 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.40

Blender Version
Broken: 2.93.0 Alpha, branch: master, commit date: 2021-02-10 21:40, hash: 175325ebdb
Worked: 2.93.0 Alpha, branch: master, commit date: 2021-02-08 23:42, hash: eab9165c25

Short description of error
After using the fill tool the grease pencil draw tool doesn't work correctly and draws strokes offset from the cursor.
I suspect the recent new fill features commit is the culprit (1352d81b17)

Note: fill tool also stops working correctly after doing this as well and just fills the entirety of the viewable canvas no matter where strokes are.

Exact steps for others to reproduce the error

  • Use default 2d animation layout (issue persists in other layouts just listing exact steps)
  • draw circle
  • fill circle with fill material using fill tool
  • switch back to draw tool and try to draw line

Also see video
Desktop 2021.02.11 - 04.59.34.01.mp4

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.40 **Blender Version** Broken: 2.93.0 Alpha, branch: master, commit date: 2021-02-10 21:40, hash: `175325ebdb` Worked: 2.93.0 Alpha, branch: master, commit date: 2021-02-08 23:42, hash: `eab9165c25` **Short description of error** After using the fill tool the grease pencil draw tool doesn't work correctly and draws strokes offset from the cursor. I suspect the recent new fill features commit is the culprit (1352d81b17) Note: fill tool also stops working correctly after doing this as well and just fills the entirety of the viewable canvas no matter where strokes are. **Exact steps for others to reproduce the error** - Use default 2d animation layout (issue persists in other layouts just listing exact steps) - draw circle - fill circle with fill material using fill tool - switch back to draw tool and try to draw line Also see video [Desktop 2021.02.11 - 04.59.34.01.mp4](https://archive.blender.org/developer/F9791878/Desktop_2021.02.11_-_04.59.34.01.mp4)

Added subscriber: @JSM

Added subscriber: @JSM

Added subscriber: @antoniov

Added subscriber: @antoniov

I cannot reproduce it in my Windows system with the last master code.

I cannot reproduce it in my Windows system with the last `master` code.

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Antonio Vazquez self-assigned this 2021-02-11 16:11:26 +01:00

Added subscriber: @filedescriptor

Added subscriber: @filedescriptor

@filedescriptor can you reproduce it?

@filedescriptor can you reproduce it?

So tried to repo on another computer and couldn't.
Can still reproduce on latest buildbot with original system.
But discovered more weirdness. I only have this issue on one monitor. using either of my 2 other connected monitors and I don't have the issue.
The troublesome monitor is an: ASUS MG278Q running at 1440p 144hz (changing resolution/hz size did not fix bug either)
Will try to narrow down and get it reproducible on other monitors.

So tried to repo on another computer and couldn't. Can still reproduce on latest buildbot with original system. But discovered more weirdness. I only have this issue on one monitor. using either of my 2 other connected monitors and I don't have the issue. The troublesome monitor is an: ASUS MG278Q running at 1440p 144hz (changing resolution/hz size did not fix bug either) Will try to narrow down and get it reproducible on other monitors.

Annnnd Figured out what the difference between the monitors. The Windows scale and layout settings was set over 100% at 150% on my one monitor.
settings.jpg

So to reproduce set monitor scaling at or above 150 % in windows display settings.

Then do original steps described in initial report.

Annnnd Figured out what the difference between the monitors. The Windows scale and layout settings was set over 100% at 150% on my one monitor. ![settings.jpg](https://archive.blender.org/developer/F9793835/settings.jpg) So to reproduce set monitor scaling at or above 150 % in windows display settings. Then do original steps described in initial report.
Member

Closed as duplicate of #85476

Closed as duplicate of #85476

I'm now not sure it's the same bug as the #85476: Multi-monitor window scale problem.
When running at at default 100% windows scale and with a single monitor I'm having offset issues like before on the latest buildbot (version: 2.93.0 Alpha, branch: master, commit date: 2021-02-20 05:19, hash: 37e6a1995a).
The only thing that's different is that I set the blender preferences > interface > Display> Resolution Scale to 1.2 or above in blender user preferences. And using the windows compatibility option, override High DPI Scaling behavior, is no longer fixing it.

Tested on a second system as well.
Operating system: Windows-10 64 Bits
Graphics card: Radeon RX 580 Series ATI Technologies Inc. 4.5.13596 Core Profile Context 20.10.35.02 27.20.1034.6

I'm now not sure it's the same bug as the #85476: Multi-monitor window scale problem. When running at at default 100% windows scale and with a single monitor I'm having offset issues like before on the latest buildbot (version: 2.93.0 Alpha, branch: master, commit date: 2021-02-20 05:19, hash: `37e6a1995a`). The only thing that's different is that I set the blender preferences > interface > Display> Resolution Scale to 1.2 or above in blender user preferences. And using the windows compatibility option, override High DPI Scaling behavior, is no longer fixing it. Tested on a second system as well. Operating system: Windows-10 64 Bits Graphics card: Radeon RX 580 Series ATI Technologies Inc. 4.5.13596 Core Profile Context 20.10.35.02 27.20.1034.6

Changed status from 'Duplicate' to: 'Confirmed'

Changed status from 'Duplicate' to: 'Confirmed'

Yes, actually is not supported to use a resolution different of 1.0. The problem is not only in Fill.

Yes, actually is not supported to use a resolution different of 1.0. The problem is not only in Fill.

Added subscribers: @HooglyBoogly, @JulianEisel

Added subscribers: @HooglyBoogly, @JulianEisel

@HooglyBoogly @JulianEisel I have tested and this bug is not in 2.83. I have not changed anything in the code related to this area, so do you know what can be the problem? Maybe some UI change?

EDIT: I tested and the problem drawing stroke was gone, and now is only fill, so I need investigate because this can be a problem in gpencil code.

@HooglyBoogly @JulianEisel I have tested and this bug is not in 2.83. I have not changed anything in the code related to this area, so do you know what can be the problem? Maybe some UI change? EDIT: I tested and the problem drawing stroke was gone, and now is only fill, so I need investigate because this can be a problem in gpencil code.

This issue was referenced by 1ec626f4bd

This issue was referenced by 1ec626f4bd06e830edc13a8a6986eec2885499dd

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.93 LTS milestone 2023-02-07 18:46:34 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#85549
No description provided.